Bug 423953 - [Wayland] logout window is a windowed window, not a full-screen window
Summary: [Wayland] logout window is a windowed window, not a full-screen window
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: wayland-generic (other bugs)
Version First Reported In: git master
Platform: Other Linux
: VHI normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: regression
Depends on:
Blocks:
 
Reported: 2020-07-06 21:50 UTC by Nate Graham
Modified: 2020-10-09 23:57 UTC (History)
5 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 5.20
Sentry Crash Report:


Attachments
ksmserver-logout-greeter is a windowed window (67.01 KB, image/jpeg)
2020-07-06 21:50 UTC, Nate Graham
Details
Now it's also blank (2.60 MB, image/jpeg)
2020-08-05 15:31 UTC, Nate Graham
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2020-07-06 21:50:30 UTC
Created attachment 129950 [details]
ksmserver-logout-greeter is a windowed window

Everything KDE from git master, Wayland, 250% scale factor with a 14" 4k screen. See attached screenshot. Does not reproduce on X11.
Comment 1 Méven Car 2020-07-08 07:22:03 UTC
I was able to reproduce.
Comment 2 Bug Janitor Service 2020-07-08 14:10:00 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/plasma-workspace/-/merge_requests/143
Comment 3 David Edmundson 2020-08-05 13:23:11 UTC
davidedmundson wrote:
> @bug_id = 423953
> @bug_status = RESOLVED
> @resolution = FIXED
> @cf_commitlink = https://invent.kde.org/plasma/plasma-workspace/commit/d6b53fca1fb43fe7299508d612b8a87cfb9546af
>
> Git commit d6b53fca1fb43fe7299508d612b8a87cfb9546af by David Edmundson, on behalf of Méven Car.
> Committed on 05/08/2020 at 12:49.
> Pushed by davidedmundson into branch 'master'.
>
> Wayland: make logout greeter a Role::Panel PlasmaSurface
>
> M  +2    -1    logout-greeter/greeter.cpp
> M  +8    -4    logout-greeter/shutdowndlg.cpp
Comment 4 Nate Graham 2020-08-05 15:30:30 UTC
I'm afraid this is not fixed for me. In fact it's now regressed. The window is still shon shown in a draggable window, but now the content is blank too. This latter issue also reproduces on X11 where the window is a full-screen overlay but now displays nothing.
Comment 5 Nate Graham 2020-08-05 15:31:10 UTC
Created attachment 130663 [details]
Now it's also blank

How it looks for me now on Wayland
Comment 6 Patrick Silva 2020-08-12 11:27:56 UTC
humm, it's fixed for me on neon unstable based on ubuntu 20.04.
Comment 7 Claudius Ellsel 2020-08-27 12:31:24 UTC
I can confirm this and it is still happening for me.
Comment 8 Nate Graham 2020-09-23 02:18:58 UTC
This was apparently a local misconfiguration, as it went away when I copied all the dbus stuff from my local install prefix to /.
Comment 9 Andrey 2020-10-05 22:28:36 UTC
Seem doesn't fixed for me.
I've rebuilt plasma-framework and plasma-workspace from scratch but still see undefined symbol: _ZN15KPluginMetaData16staticMetaObjectE errors in log:
```
> окт 06 01:16:25 host /usr/libexec/gdm-wayland-session[77400]:  "Error loading > QML file.\n24: plugin cannot be loaded for module \"org.kde.plasma.core\": Cannot load library /var/home/bam/kde/usr/lib64/qml/org/kde/plasma/core/libcorebindingsplugin.so: (/home/bam/kde/usr/lib64/libKF5Plasma.so.5: undefined symbol: _ZN15KPluginMetaData16staticMetaObjectE)\n"
окт 06 01:16:25 host /usr/libexec/gdm-wayland-session[77400]: kde.logout_greeter: (file:///usr/share/plasma/look-and-feel/org.fedoraproject.fedora.desktop/contents/logout/Logout.qml:24:1: plugin cannot be loaded for module "org.kde.plasma.core": Cannot load library /var/home/bam/kde/usr/lib64/qml/org/kde/plasma/core/libcorebindingsplugin.so: (/home/bam/kde/usr/lib64/libKF5Plasma.so.5: undefined symbol: _ZN15KPluginMetaData16staticMetaObjectE)
```

Can anyone confirm?
Comment 10 Méven Car 2020-10-06 07:23:37 UTC
You pro(In reply to Andrey from comment #9)
> Seem doesn't fixed for me.
> I've rebuilt plasma-framework and plasma-workspace from scratch but still
> see undefined symbol: _ZN15KPluginMetaData16staticMetaObjectE errors in log:
> ```
> > окт 06 01:16:25 host /usr/libexec/gdm-wayland-session[77400]:  "Error loading > QML file.\n24: plugin cannot be loaded for module \"org.kde.plasma.core\": Cannot load library /var/home/bam/kde/usr/lib64/qml/org/kde/plasma/core/libcorebindingsplugin.so: (/home/bam/kde/usr/lib64/libKF5Plasma.so.5: undefined symbol: _ZN15KPluginMetaData16staticMetaObjectE)\n"
> окт 06 01:16:25 host /usr/libexec/gdm-wayland-session[77400]:
> kde.logout_greeter:
> (file:///usr/share/plasma/look-and-feel/org.fedoraproject.fedora.desktop/
> contents/logout/Logout.qml:24:1: plugin cannot be loaded for module
> "org.kde.plasma.core": Cannot load library
> /var/home/bam/kde/usr/lib64/qml/org/kde/plasma/core/libcorebindingsplugin.so:
> (/home/bam/kde/usr/lib64/libKF5Plasma.so.5: undefined symbol:
> _ZN15KPluginMetaData16staticMetaObjectE)
> ```
> 
You probably need to rebuild plasma-framework as well.
Comment 11 David Edmundson 2020-10-06 14:28:06 UTC
>file:///usr/share/plasma/look-and-feel/org.fedoraproject.fedora.desktop/contents/logout/Logout.qml

This is from the system

>Cannot load library /var/home/bam/kde/usr/lib64/qml/org/kde/plasma/core/libcorebindingsplugin.so: 

This is not. 

Which implies you have a mixup somewhere.


Note that the logout greeter is DBus activated, DBus activating the wrong things is a seemingly common problem with setup.
Comment 12 Andrey 2020-10-06 14:48:01 UTC
Oh right, didn't see that, thank you!
Actually I also have a Toolbox container without system Plasma preinstalled, but for some reason my Plasma doesn't run there.
So I end up with running built Plasma from within container with System Plasma preinstalled also, which brings this kind of issues.. :(
Comment 13 Nate Graham 2020-10-06 14:55:36 UTC
Seems fragile. Why not just install all your KDE stuff to a prefix in your homedir as per the default kdesrc-build configuration? Is there a problem with that?
Comment 14 Andrey 2020-10-06 15:07:00 UTC
(In reply to Nate Graham from comment #13)
> Seems fragile. Why not just install all your KDE stuff to a prefix in your
> homedir as per the default kdesrc-build configuration? Is there a problem
> with that?

Nate, as you can see above, I have already installed built Plasma to the 'kde' prefix in my home. But, for some reason, it still messed up with system-installed Plasma..

Ideally I should find out why it doesn't run without preinstalled Plasma, hopefully one day I'll find time on this..
Comment 15 Andrey 2020-10-07 09:58:36 UTC
(In reply to Nate Graham from comment #8)
> This was apparently a local misconfiguration, as it went away when I copied
> all the dbus stuff from my local install prefix to /.

Essentially it was the reason indeed. I haven't copied the dbus stuff in my container without system Plasma preinstalled. As soon I did, it started and my built Plasma doesn't interferes with preinstalled one anymore! :)

Thanks Nate.
Comment 16 Andrey 2020-10-09 23:57:41 UTC
Just to make it clear: the case when system plasma is preinstalled still doesn't solved for me. I can workaround it easily because I can choose which container to run my built plasma from.
So we have to expect such kind of problems it the future, until it won't be debugged entirely..