Wayland: make logout greeter a Role::Panel PlasmaSurface

BUG: 423953